# f9

./: Cargo.toml  README.md  f9.js  index.html
.cargo/: config.toml
src/: app.rs  camera.rs  component_collection.rs  lib.rs  main.rs  project.rs
src/commands/: command.rs  mod.rs  view_commands.rs
src/components/: bezier.rs  circle.rs  component.rs  line.rs  mod.rs  point.rs  vertex.rs
src/core/: basics.rs  mod.rs  result.rs
src/dispatchers/: dispatcher.rs  mod.rs  oncedispatcher.rs  uidispatcher.rs  waitfordispatcher.rs  windowdispatcher.rs
src/rendering/: buffer.rs  buffer_reader.rs  mod.rs  renderer.rs  sphere.rs
src/shaders/: arrow.wgsl  arrow_com.wgsl  arrow_plane.wgsl  arrow_plane_com.wgsl  axis.wgsl  bezier.wgsl  bezier_com.wgsl  circle.wgsl  circle_com.wgsl  common.wgsl  compute.wgsl  computeRasterizer.wgsl  fullscreenQuad.wgsl  grid.wgsl  line.wgsl  line_com.wgsl  point.wgsl  point_com.wgsl  quad_sphere.wgsl  sphere.wgsl  uv_sphere.wgsl
src/ui/: icons.rs  main_menu.rs  mod.rs  tabcontrol.rs
