[package]
name = "f9"
version = "0.1.0"
authors = ["Niklas Nordkamp"]
edition = "2021"


[dependencies]
winit = "0.28.7"
egui_extras =  { version = "0.23.0", features = ["image", "svg"] }
image = { version = "0.24", features = ["jpeg", "png"] }
egui = "0.23.0"
eframe = { version = "0.23.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "wgpu",          # Use the glow rendering backend. Alternative: "wgpu".
] }
log = "0.4"
bytemuck = "1.13.1"
instant = { version = "0.1", features = [ "wasm-bindgen", "inaccurate" ] }
glam = "0.23.0"
uuid = {version = "1.3.0", features = [
   "v4"
]}
async-std = "1.11.0"
async-channel = "1.8.0"
futures-channel = "0.3.28"
#futures-channel = "0.3.28"
#futures = "0.3.28"
getrandom = { version = "0.2", features = ["js"] }
#pollster = "0.3.0"
parking_lot = { version = "0.12", features = ["nightly"] } # , features = ["wasm-bindgen"]
parking_lot_core = { version = "0.9.9", features = ["nightly"] }
futures-intrusive = { version = "0.5" }
value-bag = "1.4.1"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2.87"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
